# allinone4programmer-backend

./: Dockerfile  FollowMe.md  README.md  custom-pg_hba.conf  docker-compose.yml  main.py  pyproject.toml
app/: config.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: demo.py  item.py  items.py
app/core/: database.py  redis_client.py
app/middleware/: cors.py
app/models/: item.py
app/schemas/: item.py
app/services/: item_service.py
app/utils/: exceptions.py  logger.py
init-scripts/: 01-create-app-user.sh
tests/: conftest.py  test_items.py
